Added images and solution

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>
                     <button id="allow_typing_button">Allow Typing</button>
                 </p>
-                <h2 id='hidden_text' hidden>Start Typing...</h2>
+                <h2 id='hidden_text' hidden = true>Start Typing...</h2>
             </fieldset>
         </form>
     </p>
